@@ -39,6 +39,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8313: traceback.format_exception_only() encodes unicode message to
+  ASCII with backslashreplace error handler if str(value) failed
+
 - Issue #8567: Fix precedence of signals in Decimal module: when a
   Decimal operation raises multiple signals and more than one of those
   signals is trapped, the specification determines the order in which
